[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.15"
tracing = "0.1"
tracing-web = "0.1"
tracing-subscriber = { version = "0.3", features=['time', 'json'] }
time = { version = "0.3", features=['wasm-bindgen'] }

[profile.release]
lto = true
strip = true
codegen-units = 1
